kubernetes-manifests/python-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: python-api
  labels:
    app: python-api
spec:
  selector:
    matchLabels:
      app: python-api
  replicas: 1
  template:
    metadata:
      labels:
        app: python-api
    spec:
      serviceAccount: s3-getput ## add service account
      containers:
      - image: rohitkalyan18/python-api:sha-03e862dd3ef722eebcc9060fdda55bf602157928
        name: python-api
        ports:
        - containerPort: 8000
