kubernetes-manifests/frontend-nextjs.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-nextjs
  labels:
    app: frontend-nextjs
spec:
  selector:
    matchLabels:
      app: frontend-nextjs
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend-nextjs
    spec:
      containers:
      - image: docker.io/rohitkalyan18/devops-qrcode:frontend-nextjs
        name: frontend-nextjs
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: frontend-nextjs
spec:
  selector:
    app: frontend-nextjs
  type: ClusterIP
  ports:
  - targetPort: 3000
    protocol: TCP
    port: 80
