kubernetes-manifests/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-nextjs
spec:
  selector:
    app: frontend-nextjs
  type: ClusterIP
  ports:
  - targetPort: 3000
    protocol: TCP
    port: 80
