kubernetes-manifests/python-api.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: python-api
  labels:
    app: python-api
spec:
  selector:
    matchLabels:
      app: python-api
  replicas: 1
  template:
    metadata:
      labels:
        app: python-api
    spec:
      serviceAccount: s3-getput ## add service account
      containers:
      - image: docker.io/rohitkalyan18/devops-qrcode:python-api-v3
        name: python-api
        ports:
        - containerPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: python-api
spec:
  selector:
    app: python-api
  type: ClusterIP
  ports:
  - targetPort: 8000
    protocol: TCP
    port: 8000
