kubernetes-manifests/python-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: python-api
spec:
  selector:
    app: python-api
  type: ClusterIP
  ports:
  - targetPort: 8000
    protocol: TCP
    port: 8000
